Starting on bibliography with Gaebel, et al. (2018).  Added PDF tag in README.md.

--- a/notes/mixture_notes.bib
+++ b/notes/mixture_notes.bib
@@ -1,1 +1,16 @@
- 
+@ARTICLE{Gaebel2018,
+       author = {{Gaebel}, Sebastian M. and {Veitch}, John and {Dent}, Thomas and {Farr},
+        Will M.},
+        title = "{Digging the population of compact binary mergers out of the noise}",
+      journal = {ArXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2018,
+        month = Sep,
+          eid = {arXiv:1809.03815},
+        pages = {arXiv:1809.03815},
+archivePrefix = {arXiv},
+       eprint = {1809.03815},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2018arXiv180903815G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
