Notes on likelihood and prior.

--- a/notes/mixture_notes.bib
+++ b/notes/mixture_notes.bib
@@ -14,3 +14,73 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/#abs/2018arXiv180903815G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Foreman-Mackey2014,
+       author = {{Foreman-Mackey}, Daniel and {Hogg}, David W. and {Morton}, Timothy D.},
+        title = "{Exoplanet Population Inference and the Abundance of Earth Analogs from
+        Noisy, Incomplete Catalogs}",
+      journal = {\apj},
+     keywords = {catalogs, methods: data analysis, methods: statistical, planetary
+        systems, stars: statistics, Astrophysics - Earth and Planetary
+        Astrophysics, Astrophysics - Instrumentation and Methods for
+        Astrophysics},
+         year = 2014,
+        month = Nov,
+       volume = {795},
+          eid = {64},
+        pages = {64},
+          doi = {10.1088/0004-637X/795/1/64},
+archivePrefix = {arXiv},
+       eprint = {1406.3020},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2014ApJ...795...64F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mandel2018,
+       author = {{Mandel}, Ilya and {Farr}, Will M. and {Gair}, Jonathan R.},
+        title = "{Extracting distribution parameters from multiple uncertain observations
+        with selection biases}",
+      journal = {ArXiv e-prints},
+     keywords = {Physics - Data Analysis, Statistics and Probability, Astrophysics - High
+        Energy Astrophysical Phenomena},
+         year = 2018,
+        month = Sep,
+          eid = {arXiv:1809.02063},
+        pages = {arXiv:1809.02063},
+archivePrefix = {arXiv},
+       eprint = {1809.02063},
+ primaryClass = {physics.data-an},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2018arXiv180902063M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Loredo2004,
+       author = {{Loredo}, Thomas J.},
+        title = "{Accounting for Source Uncertainties in Analyses of Astronomical Survey
+        Data}",
+     keywords = {02.50.Tt, 95.80.+p, Inference methods, Astronomical catalogs atlases sky
+        surveys databases retrieval systems archives etc., Astrophysics,
+        Physics - Data Analysis, Statistics and Probability},
+    booktitle = {American Institute of Physics Conference Series},
+         year = 2004,
+       editor = {{Fischer}, Rainer and {Preuss}, Roland and {Toussaint}, Udo Von},
+       volume = {735},
+        month = Nov,
+        pages = {195-206},
+          doi = {10.1063/1.1835214},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0409387},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2004AIPC..735..195L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@techreport{Coughlin2017,
+  author      = {Jeffrey L. Coughlin},
+  title       = {Planet Detection Metrics: Robovetter Completeness and Effectiveness for Data Release 25},
+  institution = {NASA Ames Research Center},
+  year        = {2017},
+  note        = {\url{https://exoplanetarchive.ipac.caltech.edu/docs/KSCI-19114-002.pdf}},
+  number      = {KSCI-19114-002}
+}
