Added notes on detection correlations.

--- a/notes/mixture_notes.tex
+++ b/notes/mixture_notes.tex
@@ -144,6 +144,22 @@ be to allow the $\ln P$ and $\ln R$ dimensions to have \emph{independent} length
 scales; or even to impose an arbitrary \emph{metric} matrix that would allow for
 arbitrary anisotropy in the correlations.}.
 
+\section{Correlations in Planet Detection}
+
+The model currently assumes that the detection probability for each planet is
+independent of all the other planets in the same system.  This will
+over-estimate the number of planets per star (since it almost certainly makes
+second and subsequent planets seem harder to detect than they should be---at
+least if there are \emph{any} planetary disks out there).  I will think about
+how to modify the detection probability calculation to better reflect the fact
+that planets occur in disks.  That, in itself, would be worth another paper; and
+a particularly exciting one if we could find evidence for small disk opening
+angles (i.e.\ once one planet transits, all the planets transit).
+
+\section{Actual Data}
+
+Plots of the actual data go here.
+
 \bibliography{mixture_notes}
 
 \end{document}
